--- a/src/docs/assets/stylesheets/extra.css
+++ b/src/docs/assets/stylesheets/extra.css
@@ -1,11 +1,17 @@
 [data-md-color-scheme="slate"] {
     --md-default-fg-color: #e9e9e9;
-    .md-typeset h1 {
+    .md-typeset h1,
+    .md-typeset h3
+     {
+        font-weight: 400;
         color: #7c4dff;
     }
     .md-typeset h2,
-    .md-typeset h3 {
+    .md-typeset h4 {
         color: #00c753;
-        font-weight: 700;
+        font-weight: 400;
     }
+
+    --md-code-fg-color: hsla(0, 0%, 70%, 1);
+    --md-code-bg-color: hsl(0, 0%, 10%);
 }
