--- a/src/docs/assets/stylesheets/extra.css
+++ b/src/docs/assets/stylesheets/extra.css
@@ -1,4 +1,6 @@
 [data-md-color-scheme="slate"] {
+    --md-default-bg-color: #1e2129;
+    --md-default-bg-color--light: #795649;
     --md-default-fg-color: #e9e9e9;
     .md-typeset h1,
     .md-typeset h3
@@ -14,4 +16,8 @@
 
     --md-code-fg-color: hsla(0, 0%, 70%, 1);
     --md-code-bg-color: hsl(0, 0%, 10%);
+}
+
+[data-md-color-scheme="default"] {
+    --md-default-bg-color: #fafafa;
 }
