--- a/src/docs/assets/stylesheets/extra.css
+++ b/src/docs/assets/stylesheets/extra.css
@@ -1,21 +1,16 @@
 [data-md-color-scheme="slate"] {
     --md-default-bg-color: #1e2129;
-    --md-default-bg-color--light: #795649;
-    --md-default-fg-color: #e9e9e9;
+    --md-default-fg-color: hsla(var(--md-hue), 100%, 100%, 0.9);
     .md-typeset h1,
     .md-typeset h3
      {
-        font-weight: 400;
-        color: #7c4dff;
+        
+        color: var(--md-accent-fg-color);
     }
     .md-typeset h2,
     .md-typeset h4 {
         color: #00c753;
-        font-weight: 400;
     }
-
-    --md-code-fg-color: hsla(0, 0%, 70%, 1);
-    --md-code-bg-color: hsl(0, 0%, 10%);
 }
 
 [data-md-color-scheme="default"] {
